--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   carousel_slider: ^5.0.0
   
 
+  freezed_annotation: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,7 +67,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   json_serializable: ^6.9.5
   build_runner: ^2.4.6
-  freezed_annotation: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
